--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -72,8 +72,8 @@
       onclick="openNavbar()">Preise</a>
     <a href="{{ url_for('bp_info.info')}}" class="w3-bar-item w3-button w3-padding-large"
       onclick="openNavbar()">Info</a>
-    <!-- <a id="adminButtonMobile"  href="{{ url_for('bp_index.index')}}" class="w3-bar-item w3-button w3-padding-large w3-black"
-      onclick="openNavbar()" hidden>Admin</a> -->
+    <a id="adminButtonMobile"  href="{{ url_for('bp_admin.admin')}}" class="w3-bar-item w3-button w3-padding-large w3-black"
+      onclick="openNavbar()" hidden>Admin</a>
   </div>
 
 
