--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,11 +5,10 @@
 <!-- Header -->
  <header class="w3-display-container w3-white w3-center">
     <div class="w3-display-container w3-center" style="min-height: 200px;">
- <!--       <img src="../../static/images/headerImage.png" style="width:100%; opacity: 30%;">  
         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32">  -->
             <h1 class="w3-margin w3-xxlarge">Seminarvergabesystem</h1>
             <p class="w3-medium">Der Fakultät für Informatik</p>
-            <a href="{{ url_for('bp_index.index')}}"
+            <a href="{{ url_for('bp_auth.login')}}"
                 class="w3-button w3-fids-color w3-padding-large w3-large w3-margin-top w3-round">Ihr Login</a>
         </div>
     </div>
