--- a/app/templates/student/themensuche.html
+++ b/app/templates/student/themensuche.html
@@ -4,42 +4,59 @@
 
 
 <!-- Header -->
-<div class="w3-container w3-center" style="padding-bottom: 32px;">
+<div class="w3-container w3-center" >
     <h1><b>Themensuche</b></h1>
 </div>
 
+<form class="w3-container search-container w3-row" method="GET" action="{{ url_for('bp_student.themensuche') }}">
+    <div class="w3-col s10">
+        <input class="w3-input w3-border w3-round" type="text" name="search" placeholder="Alle durchsuchen..." value="{{ request.args.get('search', '') }}">
+    </div>
+    <div class="w3-col s2">
+        <button class="w3-button w3-light-grey w3-round w3-margin-left" type="submit">Suchen</button>
+    </div>
+</form>
+
+
 <div class="w3-container w3-margin-top">
-    <h1 class="w3-center">Projekte</h1>
-    <div class="w3-row">
-        {% for projekt in Projekte %}
-            <div class="w3-col l4 m6 s12 w3-margin-bottom">
-                <div class="w3-card-4 w3-white">
-                    <header class="w3-container w3-blue">
-                        <h2> {{ project.titel }} </h2>
+    {% for lehrstuhl, project_data in lehrstuhl_dict.items() %}
+        <div class="w3-container">
+            <h3 class="w3-left-align w3-text-red">{{ lehrstuhl }}</h3>
+            {% for data in project_data %}
+                <div class="w3-card-4 w3-left-align w3-margin-bottom w3-white">
+                    <header class="w3-container w3-pale-red">
+                        <h5>{{ data.project.titel}} ({{ data.art.art_typ }})</h5>
                     </header>
                     <div class="w3-container">
-                        <p><strong>geeignet für:</strong> {{ fach }}</p>
-                        <p><strong>Plätze:</strong> {{ projekt.max_anzahl }} (vergeben: 0)</p>
-                        <p><strong>Betreuer:</strong> {{ ProjektBetreuer. }}</p>
-                        <p>{{ project.beschreibung }}</p>
-                        <p><strong>Aufgabenstellung:</strong> Konzeption und Implementierung eines gegebenen XAI-Ansatzes zur Visualisierung der Entscheidungen maschineller Lernverfahren. Analyse und Interpretation der Entscheidungen maschineller Lernverfahren (z.B. anhand von Konfidenz-Größen).</p>
-                        <p><strong>Empfohlen:</strong> Interesse und Spaß an AI / Programmierung und Visualisierung</p>
-                        <p><strong>Betreuung:</strong> Thomas Krapf, Paul Miethaner</p>
+                        <p><strong>geeignet für:</strong> {{ data.fach.bezeichnung }}
+                            <strong>Betreuer:</strong>
+                                {% for betreuer in data.betreuer %}
+                                    {{ betreuer.vorname }} {{ betreuer.nachname }}
+                                    {% if not loop.last %} / {% endif %}
+                                {% endfor %}
+                        </p>
+                        <p>{{ data.project.beschreibung }}</p>
                     </div>
-                    <footer class="w3-container w3-blue w3-center">
-                        <p>Weitere Informationen</p>
-                    </footer>
                 </div>
-            </div>
-        {% endfor %}
-    </div>
+            {% endfor %}
+        </div>
+    {% endfor %}
 </div>
 
 
 <div class="w3-container w3-padding-16">
     <a href="{{ url_for('bp_index.index')}}"
-        class="w3-button w3-wiwi-color w3-padding-large w3-large w3-margin-top w3-round">Startseite</a>
+        class="w3-button w3-light-grey w3-margin-top w3-round">Startseite</a>
+    <button onclick="scrollToTop()" class = "w3-button w3-light-grey w3-round w3-margin-top w3-round" >Nach oben</button>
 </div>
+
+
+<script>
+    // Scroll to top function
+    function scrollToTop() {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+</script>
 
 
 {% endblock %}
