--- a/app/templates/layout/layout.html
+++ b/app/templates/layout/layout.html
@@ -1,4 +1,4 @@
-{%- extends "base.html" -%}
+{%- extends "layout/navigation.html" -%}
 
 {%- macro responsiveContentSize() -%}
 {% block pageContent %}{% endblock %}
