--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,70 +1,80 @@
-{% extends 'layout.html' %}
+{% extends 'layout/layout.html' %}
 
 {% block pageContent %}
 
-<!-- Header -->
- <header class="w3-display-container w3-white w3-center">
-    <div class="w3-display-container w3-center" style="min-height: 200px;">
-        <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32">  -->
-            <h1 class="w3-margin w3-xxlarge">Seminarvergabesystem</h1>
-            <p class="w3-medium">Der Fakultät für Informatik</p>
-            <a href="{{ url_for('bp_auth.login')}}"
-                class="w3-button w3-fids-color w3-padding-large w3-large w3-margin-top w3-round">Ihr Login</a>
+
+<div class="w3-container w3-center" >
+    <h1><b>Willkommen auf der Startseite der Vergabetools.</b></h1>
+</div>
+
+
+<div class="w3-container w3-white w3-center w3-padding-large">
+
+    <p>Liebe Studierende, über den Reiter "Themen" können sie zu den einzelnen Seminaren und Abschlussarbeiten die aktuell angebotenen Themen der Lehrstühle einsehen und nach ihren Bedürfnissen zu filtern. </p>
+
+
+    {% if current_user.is_authenticated %}
+        <p>Sie sind mit folgendem Nutzer angemeldet: {{ current_user.nds }}</p>
+        <a href="{{ url_for('bp_auth.logout')}}"
+                class="w3-button w3-fids-color w3-padding-large w3-large w3-margin-top w3-round">Logout</a>
+        <a href="{{ url_for('bp_auth.register')}}"
+                class="w3-button w3-fids-color w3-padding-large w3-large w3-margin-top w3-round">Registrieren</a>
+    {% else %}
+        <p>Sie sind aktuell nicht angemeldet. </p>
+        <a href="{{ url_for('bp_auth.login')}}"
+                class="w3-button w3-fids-color w3-padding-large w3-large w3-margin-top w3-round">Login</a>
+        <a href="{{ url_for('bp_auth.register')}}"
+                class="w3-button w3-fids-color w3-padding-large w3-large w3-margin-top w3-round">Registrieren</a>
+    {% endif %}
+
+</div>
+
+
+<!-- Themen nach Art -->
+<div class="w3-container w3-margin-top w3-center">
+    <h2>Aktuelle Themen</h2>
+    <div class="w3-row-padding">
+        <div class ="w3-col l1 w3-margin-bottom"><!-- da sonst 2 Spalten rechts falls großer Bildschirm -->
+            <p></p>
+        </div>
+        <div class="w3-col l2 m4 s6 w3-margin-bottom">
+            <a href="{{ url_for('bp_themen.themen_by_art', art_typ='Bachelorarbeit') }}">
+                <img src="static/images/quadratic/bachelorarbeit.png" alt="Bachelorarbeit" class="w3-image w3-circle w3-hover-opacity" style="margin: 20px;">
+            </a>
+            <p class="w3-center w3-centered">Bachelorarbeit</p>
+        </div>
+        <div class="w3-col l2 m4 s6 w3-margin-bottom">
+            <a href="{{ url_for('bp_themen.themen_by_art', art_typ='Projektseminar') }}">
+                <img src="static/images/quadratic/projektseminar.png" alt="Projektseminar" class="w3-image w3-circle w3-hover-opacity" style="margin: 20px;">
+            </a>
+            <p class="w3-center">Projektseminar</p>
+        </div>
+        <div class="w3-col l2 m4 s6 w3-margin-bottom">
+            <a href="{{ url_for('bp_themen.themen_by_art', art_typ='Masterarbeit') }}">
+                <img src="static/images/quadratic/masterarbeit.png" alt="Masterarbeit" class="w3-image w3-circle w3-hover-opacity" style="margin: 20px;">
+            </a>
+            <p class="w3-center">Masterarbeit</p>
+        </div>
+        <div class="w3-col l2 m4 s6 w3-margin-bottom">
+            <a href="{{ url_for('bp_themen.themen_by_art', art_typ='Praxisseminar') }}">
+                <img src="static/images/quadratic/praxisseminar.png" alt="Praxisseminar" class="w3-image w3-circle w3-hover-opacity" style="margin: 20px;">
+            </a>
+            <p class="w3-center">Praxisseminar</p>
+        </div>
+        <div class="w3-col l2 m4 s6 w3-margin-bottom">
+            <a href="{{ url_for('bp_themen.themen_by_art', art_typ='Theoretisches Seminar') }}">
+                <img src="static/images/quadratic/theoretischesseminar.png" alt="Theoretisches Seminar" class="w3-image w3-circle w3-hover-opacity" style="margin: 20px;">
+            </a>
+            <p class="w3-center">Theoretisches Seminar</p>
         </div>
     </div>
-</header>
-
-
-<!-- Random Displayed Text -->
-<div class="w3-container w3-white w3-center w3-padding-large">
-    
-    <h3 class="w3-margin w3-xxlarge">Willkommen auf der Startseite der Vergabetools.</h3>
-
-Liebe Studierende, untenstehend können sie zu den einzelnen Seminaren und Abschlussarbeiten die aktuell angebotenen Themen einsehen. Alternativ haben Sie über die Themen Suche die Möglichkeit genau nach Ihren Bedürfnissen zu filtern.
-<!--  {# {% if current_user.is_authenticated %}
-    <p>Benutzer angemeldet.</p>
-    <p>info: {{ current_user.nds }}</p>
-      {% endif %} #}
--->
-</div>
-
-<!-- First Row of Images -->
-
-<div class="w3-row-padding w3-padding-16" style="width: 80%; margin: auto;">
-    <div class="w3-col l4 m6 w3-margin-bottom">
-        <a href="{{ url_for('bp_index.index')}}"><img src="../../static/images/bsc.png" alt="Bild 1" style="width:100%"></a>
-    </div>
-    <div class="w3-col l4 m6 w3-margin-bottom">
-        <img src="../../static/images/sem.png" alt="Bild 2" style="width:100%">
-    </div>
-    <div class="w3-col l4 m6 w3-margin-bottom">
-        <img src="../../static/images/prasem.png" alt="Bild 3" style="width:100%">
-    </div>
-</div>
-
-<!-- Second Row of Images -->
-
-<div class="w3-row-padding w3-padding-16" style="width: 80%; margin: auto;">
-    <div class="w3-col l4 m6 w3-margin-bottom">
-        <img src="../../static/images/mscsem.png" alt="Bild 4" style="width:100%">
-    </div>
-    <div class="w3-col l4 m6 w3-margin-bottom">
-        <img src="../../static/images/tsem.png" alt="Bild 5" style="width:100%">
-    </div>
-    <div class="w3-col l4 m6 w3-margin-bottom">
-        <img src="../../static/images/bsc.png" alt="Bild 6" style="width:100%">
-    </div>
 </div>
 
 
 
-<!-- Random Displayed Text: z.B: Phase 1: Derzeit keine Aktivitäten notwendig, Phase 2: Priorisierungen vornehmen <> aktuelle Prios:  -->
-<div class="w3-container w3-white w3-center w3-padding-large">
-    {%block lockerView %}{%endblock%}
-</div>
 
 
-<!-- Current Notice -->
+
 <div class="w3-container w3-center w3-padding-32">
     <h2>Hinweise zur Themenvergabe</h2>
     <div class="w3-panel w3-card w3-center w3-padding-32">
