--- a/app/templates/themen/themen.html
+++ b/app/templates/themen/themen.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="w3-col s9 m9">
-                <input class="w3-input w3-border w3-round" type="text" name="search" placeholder="Alle durchsuchen..." value="{{ search_query }}">
+                <input class="w3-input w3-round" type="text" name="search" placeholder="Alle durchsuchen..." value="{{ search_query }}">
             </div>
             <div class="w3-col s3 m3">
                 <button class="w3-button w3-fids-color w3-round w3-margin-left w3-block" type="submit">Suchen</button>
