--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -3,9 +3,10 @@
 {% block pageContent %}
 
 <h1>Registrierung</h1>
-    <!---<p> Hallo {{ current_user.vorname }} {{ current_user.name }},<br>
+    <p> Hallo {{ current_user.vorname }} {{ current_user.nachname }} ({{ current_user.nds }}), <br> <br>
     um am Vergabeprozess teilzunehmen, werden weitere Daten von Ihnen benötigt. Sie haben zudem die Möglichkeit auszuwählen, für welche Abschlussarbeiten/ Seminare Sie sich für die Teilnahme registrieren möchten.
-    </p> -->
+    <br></p>
+
 <form method="POST" action="{{ url_for('bp_auth.register') }}" class="w3-container w3-margin-top w3-center">
 
     <div class="w3-row-padding w3-margin-bottom">
@@ -22,9 +23,10 @@
         </div>
         <div class="w3-col l9 w3-left-align">
             <select id="studiengang" name="studiengang" class="w3-select w3-border">
+            <option value="" disabled selected>Bitte wählen Sie einen Studiengang</option>
                 {% for sg in studiengaenge %}
-                <option value="{{ sg.bezeichnung }}" {% if selected_studiengang and selected_studiengang.id == sg.id %}selected{% endif %}>
-                    {{ sg.bezeichnung }}
+                <option value="{{ sg.studiengang_id }}">
+                    {{ sg.bezeichnung }} ({{ sg.abschluss }})
                 </option>
                 {% endfor %}
             </select>
@@ -35,34 +37,34 @@
         <div class="w3-col l3 w3-right-align">
             <label for="bachelorarbeit">Registrierung für:</label>
         </div>
-        <div class="w3-col l9 w3-left-align">
+       <div class="w3-col l9 w3-left-align">
             <div class="w3-row">
                 <div class="w3-col l12">
-                    <input type="checkbox" id="bachelorarbeit" name="bachelorarbeit" class="w3-check"/>
+                    <input type="checkbox" id="bachelorarbeit" name="arten" value="1" class="w3-check"/>
                     <label for="bachelorarbeit" class="w3-margin-left">Bachelorarbeit</label>
                 </div>
             </div>
             <div class="w3-row">
                 <div class="w3-col l12">
-                    <input type="checkbox" id="projektseminar" name="projektseminar" class="w3-check"/>
+                    <input type="checkbox" id="projektseminar" name="arten" value="2" class="w3-check"/>
                     <label for="projektseminar" class="w3-margin-left">Projektseminar</label>
                 </div>
             </div>
             <div class="w3-row">
                 <div class="w3-col l12">
-                    <input type="checkbox" id="masterarbeit" name="masterarbeit" class="w3-check"/>
+                    <input type="checkbox" id="masterarbeit" name="arten" value="3" class="w3-check"/>
                     <label for="masterarbeit" class="w3-margin-left">Masterarbeit</label>
                 </div>
             </div>
-            <div class="w3-rowl">
+            <div class="w3-row">
                 <div class="w3-col l12">
-                    <input type="checkbox" id="theoretisches_seminar" name="theoretisches_seminar" class="w3-check"/>
+                    <input type="checkbox" id="theoretisches_seminar" name="arten" value="4" class="w3-check"/>
                     <label for="theoretisches_seminar" class="w3-margin-left">Theoretisches Seminar</label>
                 </div>
             </div>
             <div class="w3-row">
                 <div class="w3-col l12">
-                    <input type="checkbox" id="praktisches_seminar" name="praktisches_seminar" class="w3-check"/>
+                    <input type="checkbox" id="praktisches_seminar" name="arten" value="5" class="w3-check"/>
                     <label for="praktisches_seminar" class="w3-margin-left">Praktisches Seminar</label>
                 </div>
             </div>
