--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,8 +23,12 @@
         <p>Sie sind aktuell nicht angemeldet. </p>
         <a href="{{ url_for('bp_auth.login')}}"
                 class="w3-button w3-fids-color w3-padding-large w3-large w3-margin-top w3-round">Login</a>
+
+
+        <!-- nur zum Testen -->
         <a href="{{ url_for('bp_auth.register')}}"
                 class="w3-button w3-fids-color w3-padding-large w3-large w3-margin-top w3-round">Registrieren</a>
+
     {% endif %}
 
 </div>
