--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -4,10 +4,9 @@
 
 
 <!-- Header -->
-<div class="w3-container w3-center" style="padding-bottom: 32px;">
+<div class="w3-container w3-center w3-padding-32">
   <h1><b>Login</b></h1>
 </div>
-
 
 <form class="w3-container" method="POST">
 
@@ -26,7 +25,7 @@
       type="submit">Login</button>
     <br>
     <br>
-    *Das Passwort wird nur benötigt um Sie zu verifizieren. Passwörter werden nicht gespeichert.
+    *Das Passwort wird nur benötigt, um Sie zu verifizieren. Passwörter werden nicht gespeichert.
   </div>
 
 
