--- a/app/templates/auth/logout.html
+++ b/app/templates/auth/logout.html
@@ -3,8 +3,11 @@
 {%block pageContent%}
 
 <!-- Header -->
-<div class="w3-container w3-center" style="padding-bottom: 32px;">
-  <p>Du hast dich erfolgreich ausgeloggt!</p>
+<div class="w3-container w3-center w3-padding-32">
+    <p>Du hast dich erfolgreich ausgeloggt!</p>
+    <a href="{{ url_for('bp_index.index')}}"
+       class="w3-button w3-fids-color w3-padding-large w3-large w3-margin-top w3-round">Startseite</a>
 </div>
+
 
 {% endblock %}
