--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,20 +1,21 @@
 {% extends 'layout/layout.html' %}
 
 {% block pageContent %}
-
-<h1>Registrierung</h1>
+<div class="w3-container w3-center w3-padding-32">
+  <h1>Registrierung</h1>
     <p> Hallo {{ current_user.vorname }} {{ current_user.nachname }} ({{ current_user.nds }}), <br> <br>
     um am Vergabeprozess teilzunehmen, werden weitere Daten von Ihnen benötigt. Sie haben zudem die Möglichkeit auszuwählen, für welche Abschlussarbeiten/ Seminare Sie sich für die Teilnahme registrieren möchten.
     <br></p>
+</div>
+
 
 <form method="POST" action="{{ url_for('bp_auth.register') }}" class="w3-container w3-margin-top w3-center">
-
     <div class="w3-row-padding w3-margin-bottom">
         <div class="w3-col l3 w3-right-align">
             <label for="matrikelnummer">Matrikelnummer</label>
         </div>
         <div class="w3-col l9 w3-left-align">
-            <input type="text" id="matrikelnummer" name="matrikelnummer" class="w3-input w3-border"/>
+            <input type="text" id="matrikelnummer" name="matrikelnummer" class="w3-input w3-border" required/>
         </div>
     </div>
     <div class="w3-row-padding w3-margin-bottom">
@@ -22,7 +23,7 @@
             <label for="studiengang">Studiengang</label>
         </div>
         <div class="w3-col l9 w3-left-align">
-            <select id="studiengang" name="studiengang" class="w3-select w3-border">
+            <select id="studiengang" name="studiengang" class="w3-select w3-border" required>
             <option value="" disabled selected>Bitte wählen Sie einen Studiengang</option>
                 {% for sg in studiengaenge %}
                 <option value="{{ sg.studiengang_id }}">
@@ -35,7 +36,7 @@
 
     <div class="w3-row-padding w3-margin-bottom">
         <div class="w3-col l3 w3-right-align">
-            <label for="bachelorarbeit">Registrierung für:</label>
+            <label for="registrieren">Registrierung für:</label>
         </div>
        <div class="w3-col l9 w3-left-align">
             <div class="w3-row">
@@ -72,7 +73,7 @@
     </div>
 
     <div class="w3-row-padding w3-margin-bottom w3-center">
-        <input type="submit" value="Registrieren" class=" w3-button w3-fids-color w3-padding-large w3-large w3-margin-top w3-round"/>
+        <input type="submit" value="Registrieren" class="w3-button w3-fids-color w3-padding-large w3-large w3-margin-top w3-round"/>
     </div>
 </form>
 
