--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,15 +1,16 @@
 {% extends 'layout/layout.html' %}
 
 {% block pageContent %}
-<div class="w3-container w3-center w3-padding-32">
+<div class="w3-container w3-center w3-padding-top-32">
   <h1>Registrierung</h1>
-    <p> Hallo {{ current_user.vorname }} {{ current_user.nachname }} ({{ current_user.nds }}), <br> <br>
+<p> Hallo {{ current_user.vorname }} {{ current_user.nachname }} ({{ current_user.nds }}), <br> <br>
     um am Vergabeprozess teilzunehmen, werden weitere Daten von Ihnen benötigt. Sie haben zudem die Möglichkeit auszuwählen, für welche Abschlussarbeiten/ Seminare Sie sich für die Teilnahme registrieren möchten.
     <br></p>
 </div>
 
 
 <form method="POST" action="{{ url_for('bp_auth.register') }}" class="w3-container w3-margin-top w3-center">
+
     <div class="w3-row-padding w3-margin-bottom">
         <div class="w3-col l3 w3-right-align">
             <label for="matrikelnummer">Matrikelnummer</label>
@@ -73,6 +74,7 @@
     </div>
 
     <div class="w3-row-padding w3-margin-bottom w3-center">
+        <p><b>Wichtig:</b> Diese Daten sind nach absenden für das aktuelle Semester nicht mehr änderbar!</p>
         <input type="submit" value="Registrieren" class="w3-button w3-fids-color w3-padding-large w3-large w3-margin-top w3-round"/>
     </div>
 </form>
