--- a/app/templates/student/profil.html
+++ b/app/templates/student/profil.html
@@ -11,19 +11,32 @@
     <!-- Profil Section -->
      <div id="Profil" class="w3-card-4 w3-margin-bottom w3-padding">
         <div class="w3-row" style="display: flex; align-items: center;">
-            <div class="w3-third w3-center">
-                <i class="fa fa-user w3-xxlarge"></i>
-                <h3>Profil</h3>
+            <div class="w3-quarter w3-center">
+                <i class="fa fa-user w3-jumbo"></i>
             </div>
-            <div class="w3-twothird w3-left-align">
-                <p><b>Name:</b> {{ student.vorname }} {{ student.nachname }}</p>
-                <p><b>NDS-Kennung:</b> {{ student.nds }}</p>
-                <p><b>Matrikelnummer:</b> {{ student.matrikelnummer }}</p>
-                <p><b>Registriert für:</b>
-                    {% for art in arten %}
-                        <i class="w3-text-green w3-margin-left fa fa-check-square"></i>{{ art.art_typ }}
-                    {% endfor %}
-                </p>
+            <div class="w3-threequarter w3-left-align">
+                <h3><b>Deine Daten</b></h3>
+                {% if student %}
+                    <p><b>Name:</b> {{ student.vorname }} {{ student.nachname }}</p>
+                    <p><b>NDS-Kennung:</b> {{ student.nds }}</p>
+                    <p><b>Matrikelnummer:</b> {{ student.matrikelnummer }}</p>
+                    <p><b>Registriert für:</b>
+                        {% for art in arten %}
+                            <i class="w3-text-green w3-margin-left fa fa-check-square"></i>{{ art.art_typ }}
+                        {% endfor %}
+                    </p>
+                {% else %}
+                    <p><b>Name:</b> {{ current_user.vorname }} {{ current_user.nachname }}</p>
+                    <p><b>NDS-Kennung:</b> {{ current_user.nds }}</p>
+                    <p><b>Email:</b> {{ current_user.mail }}</p>
+
+                    <p><i class="fa fa-exclamation-triangle w3-text-red"></i>
+                        Sie sind momentan nicht für den Vergabeprozess registriert
+                    <i class="fa fa-exclamation-triangle w3-text-red"></i></p>
+
+                    <a href="{{ url_for('bp_auth.register')}}"
+                class="w3-button w3-fids-color w3-padding-large w3-large w3-margin-top w3-round">Registrieren</a>
+                {% endif %}
             </div>
         </div>
     </div>
