--- a/app/templates/themen/themen_by_art.html
+++ b/app/templates/themen/themen_by_art.html
@@ -4,20 +4,42 @@
 
 
 <!-- Header -->
-<div class="w3-container w3-center w3-padding-16" >
-    <h1><b>Themen: {{ art_typ }}</b></h1>
+<div class="w3-container w3-center w3-padding-top-48 w3-padding-32 w3-display-container" style="
+    {% if art_typ == 'Bachelorarbeit' %}
+        background-image: url('{{ url_for('static', filename='images/quadratic/bachelorarbeit.png') }}');
+    {% elif art_typ == 'Masterarbeit' %}
+        background-image: url('{{ url_for('static', filename='images/quadratic/masterarbeit.png') }}');
+    {% elif art_typ == 'Projektseminar' %}
+        background-image: url('{{ url_for('static', filename='images/quadratic/projektseminar.png') }}');
+    {% elif art_typ == 'Praxisseminar' %}
+        background-image: url('{{ url_for('static', filename='images/quadratic/praxisseminar.png') }}');
+    {% elif art_typ == 'Theoretisches Seminar' %}
+        background-image: url('{{ url_for('static', filename='images/quadratic/theoretischesseminar.png') }}');
+    {% else %}
+        background-image: url('{{ url_for('static', filename='images/quadratic/bachelorarbeit.png') }}');
+    {% endif %}
+
+    background-size: cover; background-position: center;">
+    <h1 class ="w3-text-white"><b>Themen: {{ art_typ }}</b></h1>
 </div>
 
 
 
-<div class="w3-container w3-margin-top">
+<div class="w3-container w3-margin-top ">
     {% for lehrstuhl, projekte in lehrstuhl_dict.items() %}
         <div class="w3-container">
-            <h3 class="w3-left-align w3-text-red">{{ lehrstuhl }}</h3>
+            <h3 class="w3-left-align w3-text-black">{{ lehrstuhl.name }}</h3>
             {% for projekt in projekte %}
                 <div class="w3-card-4 w3-left-align w3-margin-bottom w3-white" onclick="toggleDescription(this)">
-                    <header class="w3-container w3-pale-red">
-                        <h5>{{ projekt.titel}} </h5>
+                    <header class="w3-container w3-padding-small {{ projekt.art.get_color() }}">
+                        <div class="w3-col w3-padding-small l1 w3-center w3-hide-small w3-hide-medium">
+                            {% set circle_class, circle_text = projekt.art.get_circle_tag() %}
+                            <div class="circle-tag {{ circle_class }}">{{ circle_text }}</div>
+                        </div>
+
+                        <div class="w3-col l11 w3-display-container">
+                            <h5>{{ projekt.titel }} ({{ projekt.art.art_typ }})</h5>
+                        </div>
                     </header>
                     <div class="w3-container">
                         <p><strong>geeignet für:</strong> {{ projekt.fach.bezeichnung }}
